<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_confirm"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/img_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@mipmap/image_bg_note_help" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:includeFontPadding="false"
                    android:text="@string/label_note_edu_title1___note"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/ex_medium_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:includeFontPadding="false"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/label_note_edu_content1___note"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/medium_text_size3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/label_note_edu_content2___note"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/medium_text_size3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/label_note_edu_content3___note"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/medium_text_size3" />

                <!--动态发布规则-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:includeFontPadding="false"
                    android:text="@string/label_note_edu_title2___note"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/ex_medium_text_size"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:lineSpacingMultiplier="1.4"
                        android:text="@string/label_note_edu2_content1___note"
                        android:textColor="@color/colorBlack2"
                        android:textSize="@dimen/medium_text_size3" />

                    <TextView
                        android:id="@+id/tv_note_edu2_content4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="160dp"
                        android:includeFontPadding="false"
                        android:lineSpacingMultiplier="1.4"
                        android:textColor="@color/colorBlack2"
                        android:textSize="@dimen/medium_text_size3" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tv_note_edu2_content2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:lineSpacingMultiplier="1.4"
                        android:text="@string/label_note_edu2_content2___note"
                        android:textColor="@color/colorBlack2"
                        android:textSize="@dimen/medium_text_size3" />

                    <TextView
                        android:id="@+id/tv_note_edu2_content5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="160dp"
                        android:includeFontPadding="false"
                        android:lineSpacingMultiplier="1.4"
                        android:textColor="@color/colorBlack2"
                        android:textSize="@dimen/medium_text_size3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/tv_note_edu2_content2"
                        android:layout_toRightOf="@+id/tv_note_edu2_content2"
                        android:includeFontPadding="false"
                        android:lineSpacingMultiplier="1.4"
                        android:text="@string/label_note_edu2_content7___note"
                        android:textColor="@color/colorBlack2"
                        android:textSize="@dimen/ex_small_text_size" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tv_note_edu2_content6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="160dp"
                        android:includeFontPadding="false"
                        android:lineSpacingMultiplier="1.4"
                        android:textColor="@color/colorBlack2"
                        android:textSize="@dimen/medium_text_size3" />

                    <TextView
                        android:id="@+id/tv_note_edu2_content3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:lineSpacingMultiplier="1.4"
                        android:text="@string/label_note_edu2_content3___note"
                        android:textColor="@color/colorBlack2"
                        android:textSize="@dimen/medium_text_size3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/tv_note_edu2_content3"
                        android:layout_toRightOf="@+id/tv_note_edu2_content3"
                        android:includeFontPadding="false"
                        android:lineSpacingMultiplier="1.4"
                        android:text="@string/label_note_edu2_content8___note"
                        android:textColor="@color/colorBlack2"
                        android:textSize="@dimen/ex_small_text_size" />
                </RelativeLayout>

                <!--违规删除-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:includeFontPadding="false"
                    android:text="@string/label_note_edu_title3___note"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/ex_medium_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:includeFontPadding="false"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/label_note_edu3_content1___note"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/medium_text_size3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/label_note_edu3_content2___note"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/medium_text_size3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/label_note_edu3_content3___note"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/medium_text_size3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/label_note_edu3_content4___note"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/medium_text_size3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/label_note_edu3_content5___note"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/medium_text_size3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/label_note_edu3_content6___note"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/medium_text_size3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/label_note_edu3_content7___note"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/medium_text_size3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/label_note_edu3_content8___note"
                    android:textColor="@color/colorBlack2"
                    android:textSize="@dimen/medium_text_size3" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/sl_color_primary_2_dark"
        android:text="@string/label_confirm___note"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/ex_medium_text_size" />

</RelativeLayout>