<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/label_add_note_spot_hint___note"
            android:textColor="@color/colorBlack2"
            android:textSize="@dimen/large_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/sp_r3_stroke_gray2_solid_trans"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_select_note_spot_entity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/label_select_merchant_or_product___note"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/colorBlack2"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/medium_text_size1" />

            <ImageButton
                android:id="@+id/btn_clear_note_spot_entity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/app_name"
                android:paddingRight="16dp"
                android:src="@android:drawable/presence_offline"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/sp_r3_stroke_gray2_solid_trans"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_select_note_mark"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1.0"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/label_add_mark___note"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/colorBlack2"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/medium_text_size1" />

            <ImageButton
                android:id="@+id/btn_clear_note_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/app_name"
                android:paddingRight="16dp"
                android:src="@android:drawable/presence_offline"
                android:visibility="gone" />

        </LinearLayout>

        <com.hunliji.hljcommonlibrary.views.widgets.ClearableEditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/sp_r3_stroke_gray2_solid_trans"
            android:gravity="center_vertical"
            android:hint="@string/label_input_price___note"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/colorBlack2"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/medium_text_size1" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/sl_r3_primary_2_dark"
            android:gravity="center"
            android:text="@string/label_confirm___note"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/ex_medium_text_size" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@mipmap/icon_close_yellow_26_26"
        android:tint="@color/colorGray2" />

</RelativeLayout>
